example env updated

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:uN5PbFRXbR8GsiGaqYd/BJ5jTVHRvtm0K/RJ86A1jYA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=shopify-backend
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -56,3 +56,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SHOPIFY_API_KEY=09a014a5090df5b714f770d51d8fb853
+SHOPIFY_API_SECRET=9919db6206ec5903dcab433abf74c896
+SHOPIFY_STORE_URL=https://chaly-test.myshopify.com
+SHOPIFY_ACCESS_TOKEN=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
